Fix permanent scrollbar in chrome

--- a/css/main.scss
+++ b/css/main.scss
@@ -100,7 +100,7 @@ footer {
     padding-top: 80px;
     top: 0;
     max-height: 100vh;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     .navigation {
         list-style: none;
